[gd_scene load_steps=2 format=3 uid="uid://mfit8sernyqs"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_gpqc6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpqc6")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.5
offset_top = 20.0
offset_right = -38.5
offset_bottom = 43.0
grow_horizontal = 2
scale = Vector2(3, 3)
text = "HexMines"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "New Game"

[node name="HighScoreButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "High Scores"

[connection signal="pressed" from="NewGameButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HighScoreButton" to="." method="_on_high_score_button_pressed"]
